[package]
name = "dufs"
version = "0.35.0"
authors = ["sigoden <sigoden@gmail.com>"]
categories = ["command-line-utilities", "web-programming::http-server"]
edition = "2021"
homepage = "https://github.com/sigoden/dufs"
keywords = ["static", "file", "server", "webdav", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sigoden/dufs"
description = "Dufs is a distinctive utility file server"

[dependencies]
alphanumeric-sort = "1.4"
anyhow = "1.0"
async-stream = "0.3"
async_zip = { version = "0.0.15", default-features = false, features = ["deflate", "chrono", "tokio"] }
base64 = "0.21"
chardetng = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
content_inspector = "0.2"
form_urlencoded = "1.2"
futures = "0.3"
glob = "0.3.1"
headers = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
if-addrs = "0.10.1"
indexmap = "2.0"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
mime_guess = "2.0"
percent-encoding = "2.3"
rustls = { version = "0.21", default-features = false, features = ["tls12"], optional = true }
rustls-pemfile = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
tokio-rustls = { version = "0.24", optional = true }
tokio-util = { version = "0.7", features = ["io-util", "compat"] }
urlencoding = "2.1"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
walkdir = "2.3"
xml-rs = "0.8"

[features]
default = ["tls"]
tls = ["rustls", "rustls-pemfile", "tokio-rustls"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
diqwest = { version = "1", features = ["blocking"] }
port_check = "0.1"
predicates = "3"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
rstest = "0.18"
url = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
